fixbug ECM-2768 Set align for label 'root path' and its icon in 'Select location' form in Fast Content Creator

--- a/portlet/ecm/src/main/webapp/skin/webui/component/fastcontentcreator/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/fastcontentcreator/DefaultStylesheet.css
@@ -79,10 +79,6 @@
 	padding: 4px 0px;
 }
 
-.UIFastContentCreatorPortlet .UIOneNodePathSelector .rootNodeInfo .UIFormInputSet {
-	padding: 0px;
-}
-
 .UIFastContentCreatorPortlet .UIEditModeConfiguration .HorizontalLayout .FormContainer {
 	width: 555px;
 	margin: auto;
@@ -103,8 +99,16 @@
 	width: 235px;
 }
 
-.UIFastContentCreatorPortlet .UIForm .HorizontalLayout .UIFormGrid td.FieldComponent {
+.UIFastContentCreatorPortlet .UIForm td.FieldComponent {
   padding: 4px 0px;
+}
+
+.UIFastContentCreatorPortlet .UIForm .rootNodeInfo td.FieldComponent {
+	padding: 0px;
+}
+
+.UIFastContentCreatorPortlet .UIOneNodePathSelector .rootNodeInfo .UIFormInputSet {
+	padding: 0px;
 }
 
 .UIFastContentCreatorPortlet .UIFormInputSet .UIFormInputSetWithAction .UIFormGrid td.FieldLabel {
